--- a/.github/workflows/feature_pipeline.yml
+++ b/.github/workflows/feature_pipeline.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     name: Build
     env:
-      SCHEME: "Actions"
+      SCHEME: "TDDCourse"
       DEVICE: "iPhone 11"
       DERIVED_DATA_PATH: "DerivedData"
     runs-on: macOS-latest
@@ -31,7 +31,7 @@ jobs:
     env:
       DEVICE: "iPhone 11"
       DERIVED_DATA_PATH: "DerivedData"
-      UNIT_TEST_TARGET: "ActionsTests"
+      UNIT_TEST_TARGET: "TDDCourseTests"
     runs-on: macOS-latest
     needs: build
     steps:
@@ -55,7 +55,7 @@ jobs:
     env:
       DEVICE: "iPhone 11"
       DERIVED_DATA_PATH: "DerivedData"
-      UI_TEST_TARGET: "ActionsUITests"
+      UI_TEST_TARGET: "TDDCourseUITests"
     runs-on: macOS-latest
     needs: build
     steps:
