--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: GitHub Action for SwiftLint with --strict
-      uses: norio-nomura/action-swiftlint@3.1.0
-      with:
-        args: --strict
+    - name: Lint Action
+      uses: wearerequired/lint-action@v1.6.0
  
   build-and-test:
     name: Build & Test
