--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      
+    - name: Install SwiftLint
+      run: brew install swiftlint
+      
     - name: Lint Action
       uses: wearerequired/lint-action@v1.6.0
       with:
