--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,20 +10,20 @@ jobs:
   
   build:
     name: Swift Lint
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v2
       
     - name: Install SwiftLint
+      run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
+      
+    - name: Install SwiftLint
       run: brew install swiftlint
       
-    - name: Lint Action
-      uses: wearerequired/lint-action@v1.6.0
-      with:
-        swiftformat: true
-        swiftlint: true
- 
+    - name: Install SwiftLint
+      run: swiftlint
+
   build-and-test:
     name: Build & Test
     runs-on: macos-latest
