--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   
-  build:
+  swiftlint:
     name: Swift Lint
     runs-on: macos-latest
 
@@ -37,3 +37,19 @@ jobs:
     - name: Build and test
       run: xcodebuild clean build test -project TDDCourse.xcodeproj -scheme "TDDCourse" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
       #run: xcodebuild clean build test -workspace App/QuizApp.xcworkspace -scheme "CI" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
+
+  generate-documentation:
+      name: Generate Documentation
+      runs-on: macos-latest
+
+      steps:
+      - uses: actions/checkout@v2
+      
+      - name: Install Homebrew
+        run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
+      
+      - name: Install Swift-Docs
+        run: brew install swiftdocorg/formulae/swift-doc
+      
+      - name: Run Swift-Docs
+        run: swift doc generate TDDCourse
