--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,4 +52,4 @@ jobs:
         run: brew install swiftdocorg/formulae/swift-doc
       
       - name: Run Swift-Docs
-        run: swift doc generate TDDCourse
+        run: swift doc generate TDDCourse -module-name TDDCourse
