--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - run: set -o pipefail 
       
     - name: Install Homebrew
       run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
@@ -30,6 +31,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - run: set -o pipefail 
 
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode_12.app
@@ -44,6 +46,7 @@ jobs:
 
       steps:
       - uses: actions/checkout@v2
+      - run: set -o pipefail 
       
       - name: Install Homebrew
         run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
