--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
       run: swiftlint
 
   build-and-test:
+    needs: swiftlint
+    
     name: Build & Test
     runs-on: macos-latest
 
@@ -41,6 +43,8 @@ jobs:
       #run: xcodebuild clean build test -workspace App/QuizApp.xcworkspace -scheme "CI" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 11" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
 
   generate-documentation:
+      needs: [swiftlint, build-and-test]
+      
       name: Generate Documentation
       runs-on: macos-latest
 
