--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -6,10 +6,8 @@ disabled_rules: # rule identifiers to exclude from running
  - multiple_closures_with_trailing_closure # Conflicts with Xcode closures auto completions
 
 excluded: # paths to ignore during linting. Takes precedence over `included`.
- - Pods
- - Urbvan/Extensions/Localization
- - Urbvan/Extra
- - Urbvan/Managers/NavigationManagers
+ - TDDCourseTests
+ - TDDCourseUITests
 
 line_length: 250
 
