--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -2,7 +2,7 @@ disabled_rules: # rule identifiers to exclude from running
  - trailing_whitespace
  #- force_try
  #- function_parameter_count
- #- force_cast
+ - force_cast
  - multiple_closures_with_trailing_closure # Conflicts with Xcode closures auto completions
 
 excluded: # paths to ignore during linting. Takes precedence over `included`.
