--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,6 +3,7 @@ disabled_rules: # rule identifiers to exclude from running
  #- force_try
  #- function_parameter_count
  #- force_cast
+ - identifier_name
  - multiple_closures_with_trailing_closure # Conflicts with Xcode closures auto completions
 
 excluded: # paths to ignore during linting. Takes precedence over `included`.
