--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,4 +55,4 @@ jobs:
         run: brew install swiftdocorg/formulae/swift-doc
       
       - name: Run Swift-Docs
-        run: swift doc generate TDDCourse -module-name TDDCourse
+        run: swift doc generate TDDCourse --module-name TDDCourse
