--- a/.github/workflows/features_pipeline.yml
+++ b/.github/workflows/features_pipeline.yml
@@ -10,19 +10,17 @@ jobs:
   
   swiftlint:
     name: Swift Lint
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-      
-    - name: Install Homebrew
-      run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
-      
-    - name: Install SwiftLint
-      run: brew install swiftlint
-      
-    - name: Run Swiftlint
-      run: swiftlint
+      - name: Check out Git repository
+        uses: actions/checkout@v2
+
+      - name: Run linters
+        uses: wearerequired/lint-action@v1
+        with:
+          github_token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          swiftlint: true
 
   build-and-test:
     needs: swiftlint
